// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableToolbar component should render 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:r0:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:r1:"
  >
    Some
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`TableToolbar component should render a footer 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar ins-m-footer"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:rl:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:rm:"
  >
    Footer
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`TableToolbar component should render with results and selection of 1 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:ri:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:rj:"
  >
    Some
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <div
    class="ins-c-table__toolbar-results"
  >
    <span
      class="ins-c-table__toolbar-results-count"
    >
       
      1 Result
       
    </span>
    <span
      class="ins-c-table__toolbar-results-selected"
    >
       
      1
       Selected 
    </span>
  </div>
</div>
`;

exports[`TableToolbar component should render with results greater than 1 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:r9:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:ra:"
  >
    Some
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <div
    class="ins-c-table__toolbar-results"
  >
    <span
      class="ins-c-table__toolbar-results-count"
    >
       
      2 Results
       
    </span>
  </div>
</div>
`;

exports[`TableToolbar component should render with results of 0 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:r3:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:r4:"
  >
    Some
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <div
    class="ins-c-table__toolbar-results"
  >
    <span
      class="ins-c-table__toolbar-results-count"
    >
       
      0 Results
       
    </span>
  </div>
</div>
`;

exports[`TableToolbar component should render with results of 1 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:r6:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:r7:"
  >
    Some
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <div
    class="ins-c-table__toolbar-results"
  >
    <span
      class="ins-c-table__toolbar-results-count"
    >
       
      1 Result
       
    </span>
  </div>
</div>
`;

exports[`TableToolbar component should render with selection of 0 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:rc:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:rd:"
  >
    Some
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <div
    class="ins-c-table__toolbar-results"
  >
    <span
      class="ins-c-table__toolbar-results-selected"
    >
       
      0
       Selected 
    </span>
  </div>
</div>
`;

exports[`TableToolbar component should render with selection of 1 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:rf:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:rg:"
  >
    Some
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <div
    class="ins-c-table__toolbar-results"
  >
    <span
      class="ins-c-table__toolbar-results-selected"
    >
       
      1
       Selected 
    </span>
  </div>
</div>
`;
